# tankard

./: .envrc  .gitignore  Cargo.toml  alpine.ts  atlas.hcl  bun.lockb  deny.toml  devenv.nix  devenv.yaml  flake.nix  index.ts  package.json  private_key.pem  public_key.pem  schema.hcl  sql-formatter.config.json  tailwind.config.ts  tankard.control  uno.config.ts
app/: Cargo.toml  package.json  tsconfig.json
app/modules/: index.ts
app/src/: auth.rs  commands.rs
app/src/routes/: api.rs  games.rs  index.rs  signin.rs
data/: auth.sql  events.sql  games.sql  init.sql  seed.sql  users.sql
data/games/: commands.sql  events.sql  snaps.sql  views.sql
data/users/: commands.sql  events.sql  snaps.sql  triggers.sql  views.sql
db/: Cargo.toml  atlas.hcl  schema.hcl
db/migrations/: 20240329145141.sql  atlas.sum
db/sql/: composite_keys.sql  games.sql  html.sql  no_ts_cols.sql  table_non_key_columns.sql  table_primary_key_columns.sql  users.sql
db/src/: event_source.rs  first_last.rs  html.rs  json.rs  lib.rs  users.rs
modules/: htmx.ts
sql/: init.sql  users.sql
src/: commands.rs  components.rs  lib.rs  main.rs  routes.rs  users.rs
src/routes/: api.rs  games.rs  index.rs  profile.rs  signin.rs  signout.rs  signup.rs
srv/: Cargo.toml  build.rs
srv/sql/: schema_tables_columns.sql
srv/src/: api.rs  main.rs  parser.rs
style/: _index.scss  tailwind.config.ts
tmpl/: table.html
