[package]
name = "tankard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis = { version = "0.5.0-alpha.0", features = ["redis"] }
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-routing", "typed-header", "cookie"] }
axum-htmx = "0.5.0"
maud = { version = "0.26.0", features = ["axum"] }
pasetors = "0.6.8"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tower-livereload = "0.9.1"
