[package]
name = "tankard"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_tankard"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
minify-html-onepass = "0.15.0"
minijinja = "2.2.0"
pgrx = "=0.12.4"
serde_json = "1.0.128"

[dev-dependencies]
pgrx-tests = "=0.12.4"
