[package]
name = "tankard_srv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["json-lines", "typed-header"] }
axum-htmx = "0.6.0"
futures = "0.3.30"
headers-accept = "0.1.3"
mediatype = "0.19.18"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.38.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
winnow = "0.6.16"

[dev-dependencies]
http-body-util = "0.1.2"
scraper = "0.19.1"
tower = { version = "0.4.13", features = ["util"] }

[build-dependencies]
ureq = "2.10.0"
