[package]
name = "tankard_srv"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["json-lines", "typed-header"] }
axum-htmx = "0.6.0"
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
futures = "0.3.31"
headers-accept = "0.1.4"
itertools = "0.13.0"
mediatype = "0.19.18"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
tower-http = { version = "0.6.1", features = ["fs"] }
winnow = "0.6.20"

[dev-dependencies]
http-body-util = "0.1.2"
scraper = "0.20.0"
tower = { version = "0.5.1", features = ["util"] }

[build-dependencies]
ureq = "2.10.1"
